Fix: Profile. CoverPhoto is ok, specialties buttons styled ok, links take you to main page (without filtering). SocialNetwork buttons are working. Info is aligned correctly

--- a/src/components/Cards/SpecialityCard/SpecialityCard.css
+++ b/src/components/Cards/SpecialityCard/SpecialityCard.css
@@ -1,12 +1,10 @@
 .speciality-container {
-  width: 290px !important;
-  border-color: #656565;
+  width: 280px !important;
+  border-color: #42b7d0;
+  border-radius: 10px;
   border-style: solid;
   border-width: 1px;
   border-radius: 16px;
-}
-.button-service-block {
-  width: 280px;
 }
 
 .specialitycard {
